--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
   "directories": {
     "example": "example"
   },
+  "scripts": {
+    "dev":"http-server ./example"
+  },
   "repository": {
     "type": "git",
     "url": "https://github.com/brunjo/rowGrid.js.git"
@@ -22,7 +25,10 @@
     "url": "https://github.com/brunjo/rowGrid.js/issues"
   },
   "homepage": "https://github.com/brunjo/rowGrid.js",
-  "dependencies" : {
+  "dependencies": {
     "jquery": ">=1.7.0"
+  },
+  "devDependencies": {
+    "http-server": "^0.9.0"
   }
 }
